:wastebasket: Cleaned up code