@@ -23,12 +23,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Random;
 
-/**
- * This file has been created by Ian Toujou.
- * Project: Kazunya
- * Date: 03/11/2021
- * Time: 14:55
- */
 public class KissCommand extends ListenerAdapter implements ICommand {
 
     private final Config config;
@@ -44,7 +38,7 @@ public class KissCommand extends ListenerAdapter implements ICommand {
         Member member = context.getMember();
         EmbedBuilder embedBuilder = new EmbedBuilder();
 
-        Member target = args.get(0).getAsMember();
+        Member target = args.getFirst().getAsMember();
         assert target != null;
 
         if(target.getId().equals(member.getId())) {
@@ -57,7 +51,7 @@ public class KissCommand extends ListenerAdapter implements ICommand {
         embedBuilder.setTitle("**:heart: Kiss**");
         embedBuilder.setDescription(member.getAsMention() + " gives " + target.getAsMention() + " a kiss! Nawww~");
         embedBuilder.setImage(images.get(new Random().nextInt(images.size())));
-        embedBuilder.setColor(ColorUtil.getFromRGBString(config.getString("format.color.default")));
+        embedBuilder.setColor(ColorUtil.rgb(config.getString("format.color.default")));
         context.getInteraction().reply(target.getAsMention())
                 .addEmbeds(embedBuilder.build())
                 .addComponents(ActionRow.of(Button.secondary("kiss-" + member.getId() + "-" + target.getId(), "😚 Kiss Back")))
@@ -90,36 +84,36 @@ public class KissCommand extends ListenerAdapter implements ICommand {
             embedBuilder.setTitle("**:heart: Kiss**");
             embedBuilder.setDescription(member.getAsMention() + " gives " + target.getAsMention() + " a kiss! Nawww~");
             embedBuilder.setImage(images.get(new Random().nextInt(images.size())));
-            embedBuilder.setColor(ColorUtil.getFromRGBString(config.getString("format.color.default")));
+            embedBuilder.setColor(ColorUtil.rgb(config.getString("format.color.default")));
             event.reply(target.getAsMention()).addEmbeds(embedBuilder.build()).queue();
 
         });
     }
 
     @Override
-    public String getName() {
+    public String name() {
         return "kiss";
     }
 
     @Override
-    public String getDescription() {
+    public String description() {
         return "Kiss another person.";
     }
 
     @Override
-    public String getEmoji() {
+    public String emoji() {
         return "😚";
     }
 
     @Override
-    public List<OptionData> getOptions() {
+    public List<OptionData> options() {
         List<OptionData> optionData = new ArrayList<>();
         optionData.add(new OptionData(OptionType.USER, "user", "The person you want to kiss.", true));
         return optionData;
     }
 
     @Override
-    public CommandCategory getCategory() {
+    public CommandCategory category() {
         return CommandCategory.ROLEPLAY;
     }
 
