@@ -38,7 +38,7 @@ public class NomCommand extends ListenerAdapter implements ICommand {
         Member member = context.getMember();
         EmbedBuilder embedBuilder = new EmbedBuilder();
 
-        Member target = args.get(0).getAsMember();
+        Member target = args.getFirst().getAsMember();
         assert target != null;
 
         if(target.getId().equals(member.getId())) {
@@ -51,7 +51,7 @@ public class NomCommand extends ListenerAdapter implements ICommand {
         embedBuilder.setTitle("**:yum: Nom**");
         embedBuilder.setDescription(member.getAsMention() + " noms " + target.getAsMention() + "! Yummy!");
         embedBuilder.setImage(images.get(new Random().nextInt(images.size())));
-        embedBuilder.setColor(ColorUtil.getFromRGBString(config.getString("format.color.default")));
+        embedBuilder.setColor(ColorUtil.rgb(config.getString("format.color.default")));
         context.getInteraction().reply(target.getAsMention())
                 .addEmbeds(embedBuilder.build())
                 .addComponents(ActionRow.of(Button.secondary("nom-" + member.getId() + "-" + target.getId(), "😋 Nom Back")))
@@ -84,36 +84,36 @@ public class NomCommand extends ListenerAdapter implements ICommand {
             embedBuilder.setTitle("**:yum: Nom**");
             embedBuilder.setDescription(member.getAsMention() + " noms " + target.getAsMention() + "! Yummy!");
             embedBuilder.setImage(images.get(new Random().nextInt(images.size())));
-            embedBuilder.setColor(ColorUtil.getFromRGBString(config.getString("format.color.default")));
+            embedBuilder.setColor(ColorUtil.rgb(config.getString("format.color.default")));
             event.reply(target.getAsMention()).addEmbeds(embedBuilder.build()).queue();
 
         });
     }
 
     @Override
-    public String getName() {
+    public String name() {
         return "nom";
     }
 
     @Override
-    public String getDescription() {
+    public String description() {
         return "Nom or bite someone else.";
     }
 
     @Override
-    public String getEmoji() {
+    public String emoji() {
         return "😋";
     }
 
     @Override
-    public List<OptionData> getOptions() {
+    public List<OptionData> options() {
         List<OptionData> optionData = new ArrayList<>();
         optionData.add(new OptionData(OptionType.USER, "user", "The person you want to nom.", true));
         return optionData;
     }
 
     @Override
-    public CommandCategory getCategory() {
+    public CommandCategory category() {
         return CommandCategory.ROLEPLAY;
     }
 
