@@ -38,7 +38,7 @@ public class PatCommand extends ListenerAdapter implements ICommand {
             return;
         }
 
-        Member target = args.get(0).getAsMember();
+        Member target = args.getFirst().getAsMember();
         assert target != null;
 
         if(target.getId().equals(member.getId())) {
@@ -51,35 +51,35 @@ public class PatCommand extends ListenerAdapter implements ICommand {
         embedBuilder.setTitle("**:purple_heart: Headpat**");
         embedBuilder.setDescription(member.getAsMention() + " pats " + target.getAsMention() + "! :3");
         embedBuilder.setImage(images.get(new Random().nextInt(images.size())));
-        embedBuilder.setColor(ColorUtil.getFromRGBString(config.getString("format.color.default")));
+        embedBuilder.setColor(ColorUtil.rgb(config.getString("format.color.default")));
         context.getInteraction().reply(target.getAsMention()).addEmbeds(embedBuilder.build()).queue();
 
     }
 
     @Override
-    public String getName() {
+    public String name() {
         return "pat";
     }
 
     @Override
-    public String getDescription() {
+    public String description() {
         return "Headpat another person.";
     }
 
     @Override
-    public String getEmoji() {
+    public String emoji() {
         return "💙";
     }
 
     @Override
-    public List<OptionData> getOptions() {
+    public List<OptionData> options() {
         List<OptionData> optionData = new ArrayList<>();
         optionData.add(new OptionData(OptionType.USER, "user", "The person you want to headpat.", true));
         return optionData;
     }
 
     @Override
-    public CommandCategory getCategory() {
+    public CommandCategory category() {
         return CommandCategory.ROLEPLAY;
     }
 
